# pinpong

./: README.md  agent.py  ball.py  ball_fixed.py  config.py  debug_ball.py  digest.txt  game.py  hello.py  main.py  main_fast.py  main_final.py  main_simple.py  main_slow.py  main_test.py  main_visual.py  main_working.py  neural_network.py  paddle.py  pyproject.toml  recorder.py  simple_ball_test.py  test_ball_visual.py  test_basic.py  test_test_main_visual.py  test_visual.py  vtrace_agent.py
models/: agent1_episode_100.pth  agent1_episode_200.pth  agent1_episode_300.pth  agent1_episode_400.pth  agent1_episode_500.pth  agent1_episode_600.pth  agent1_episode_700.pth  agent2_episode_100.pth  agent2_episode_200.pth  agent2_episode_300.pth  agent2_episode_400.pth  agent2_episode_500.pth  agent2_episode_600.pth  agent2_episode_700.pth
