[project]
name = "pinpong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg>=1.4",
    "imageio[ffmpeg,pyav]>=2.37.0",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "rich>=14.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
